refactor: A few cleanups